--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-three-fiber": "^6.0.13",
