--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-three-fiber": "^6.0.13",
+    "react-toastify": "^11.0.5",
     "react-use-scroll-snap": "^0.0.4",
     "scrollax": "^1.0.0",
     "slick-carousel": "^1.8.1",
